amelioration de la semantic

--- a/about.html
+++ b/about.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="Container">
     <header class="Header">
-      <h1 class="firstname">Florian</h1>
-      <h2 class="lastname">LABARE</h2>
+      <a href="index.html">
+        <img src="asset/flomenu.svg" alt="">
+      </a>
     </header>
     <nav>
       <ul class="LinkBar">
@@ -17,11 +17,14 @@
       </ul>
     </nav>
     <main class="Container-main Main">
-      <ul class="Main-content">
+      <p>
+        Hello! c'est ici que je parle de moi ^^
+      </p>
+      <!--<ul class="Main-content">
         <li class="Main-item _1"><a href="#">lorem ipsum</a></li>
         <li class="Main-item _2"><a href="#">lorem ipsum</a></li>
         <li class="Main-item _3"><a href="#">lorem ipsum</a></li>
-      </ul>
+      </ul>-->
     </main>
   </body>
 </html>
