ameliortation page accueil

--- a/index.html
+++ b/index.html
@@ -1,27 +1,40 @@
 <!doctype html>
 <html>
   <head>
+
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body class="Container">
+
     <header class="Header">
-      <h1 class="firstname">Florian</h1>
-      <h2 class="lastname">LABARE</h2>
+        <img class="Firstname" src="asset/flomenu.svg" alt="">
     </header>
     <nav>
       <ul class="LinkBar">
-        <li class="LinkBar-link"><a href="about.html">About</a></li>
-        <li class="LinkBar-link"><a href="#">Contact</a></li>
+        <li class="LinkBar-link">
+          <a id=about href="about.html">About</a>
+        </li>
+        <li class="LinkBar-link">
+          <a id=contact href="#">Contact</a>
+        </li>
       </ul>
+        <hr>
     </nav>
+
     <main class="Container-main Main">
       <ul class="Main-content">
-        <li class="Main-item _1"><a href="#">lorem ipsum</a></li>
-        <li class="Main-item _2"><a href="#">lorem ipsum</a></li>
-        <li class="Main-item _3"><a href="#">lorem ipsum</a></li>
+        <li class="Main-item _1"><a id="Logos" href="#">Logos</a></li>
+        <li class="Main-item _2"><a id="Illustrations" href="#">Illustrations</a></li>
+        <li class="Main-item _3"><a id="Affiches" href="#">Affiches</a></li>
       </ul>
     </main>
+    <footer class="Footer">
+    </footer>
+
   </body>
 </html>
