--- a/about.html
+++ b/about.html
@@ -1,20 +1,29 @@
 <!doctype html>
 <html>
   <head>
+
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body class="Container">
+
     <header class="Header">
-      <a href="index.html">
-        <img src="asset/flomenu.svg" alt="">
-      </a>
+        <img class="Firstname" src="asset/flomenu.svg" alt="">
     </header>
     <nav>
       <ul class="LinkBar">
-        <li class="LinkBar-link"><a href="about.html">About</a></li>
-        <li class="LinkBar-link"><a href="#">Contact</a></li>
+        <li class="LinkBar-link">
+          <a id=about href="about.html">About</a>
+        </li>
+        <li class="LinkBar-link">
+          <a id=contact href="#">Contact</a>
+        </li>
       </ul>
+        <hr>
     </nav>
     <main class="Container-main Main">
       <p>
