--- a/about.html
+++ b/about.html
@@ -6,34 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.css">
+    <title>Portfolio Florian Labare</title>
   </head>
 
   <body class="Container">
 
     <header class="Header">
-        <img class="Firstname" src="asset/flomenu.svg" alt="">
+        <a href="index.html"><img class="Firstname" src="asset/flomenu.svg" alt=""></a>
     </header>
     <nav>
       <ul class="LinkBar">
-        <li class="LinkBar-link">
-          <a id=about href="about.html">About</a>
-        </li>
-        <li class="LinkBar-link">
-          <a id=contact href="#">Contact</a>
-        </li>
+        <li class="LinkBar-link"><a id=about href="about.html">About</a></li>
+        <li class="LinkBar-link"><a id=contact href="#">Contact</a></li>
       </ul>
         <hr>
     </nav>
     <main class="Container-main Main">
-      <p>
-        Hello! c'est ici que je parle de moi ^^
+      <p class="Main-bio">
+        Ayant de l'expérience dans le graphisme,<br>j'ai décider d'étendre mes compétences<br>
+        en alliant mon savoir faire créatif et le<br>métier de Développeur Web.
       </p>
-      <!--<ul class="Main-content">
-        <li class="Main-item _1"><a href="#">lorem ipsum</a></li>
-        <li class="Main-item _2"><a href="#">lorem ipsum</a></li>
-        <li class="Main-item _3"><a href="#">lorem ipsum</a></li>
-      </ul>-->
+      <aside class="Main-aside">
+        <a class="CV" href="asset/cv-florian.jpg"><p>Accès à mon CV</p></a>
+      </aside>
     </main>
   </body>
 </html>
