--- a/logo.html
+++ b/logo.html
@@ -1,20 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="logo.css">
   </head>
 
   <body class="Container">
 
     <header class="Header">
-        <img class="Firstname" src="asset/flomenu.svg" alt="">
-        <h1 class="Mywork" hidden>My work</h1>
+      <a href="index.html"><img class="Firstname" src="asset/flomenu.svg" alt=""></a>
     </header>
 
     <nav>
@@ -27,13 +25,12 @@
 
     <main class="Container-main Main">
       <ul class="Main-content">
-        <li class="Main-item _1"><a id="Logos" href="logo.html">Logos</a></li>
-        <li class="Main-item _2"><a id="Illustrations" href="#">Illustrations</a></li>
-        <li class="Main-item _3"><a id="Affiches" href="#">Affiches</a></li>
+        <img class="Main-item _1" src=""></img>
+        <img class="Main-item _2" src=""></span>
+        <img class="Main-item _3" scr=""></span>
+        <img class="Main-item _4" src=""></span>
       </ul>
     </main>
-    <footer class="Footer">
-    </footer>
 
   </body>
 </html>
