--- a/logo.html
+++ b/logo.html
@@ -29,14 +29,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img class="d-block w-100" src="asset/flotoju.jpg" alt="First slide" width="300">
+            <p id="description0">Logo pour un site e-commerce dans le cadre de ma formation</p>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100 plaquette-logo" src="asset/plaquette-logo.jpg" alt="Second slide">
+              <p id="description1">Logos pour épicerie bio en vrac au Tampon (Réunion)</p>
           </div>
           <div class="carousel-item">
             <div id="bio">
-              <img class="d-block w-100" src="asset/biofo.jpg" alt="Third slide">
+              <img class="d-block w-100" src="asset/as.jpg" alt="Third slide">
+              <p id="description2">Logo pour une marque de narguilé</p>
             </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 plaquette-logo" src="asset/biofo.jpg" alt="Fourth slide">
+              <p id="description3">Logo Bioforce Energia, préstataire de Engie</p>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
