--- a/logo.html
+++ b/logo.html
@@ -45,6 +45,10 @@
             <img class="d-block w-100 plaquette-logo" src="asset/biofo.jpg" alt="Fourth slide">
               <p id="description3">Logo Bioforce Energia, préstataire de Engie</p>
           </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 plaquette-logo" src="asset/logo-simplonP20.jpg" alt="Fifth slide">
+              <p id="description4">Logo de la promo Simplon</p>
+          </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
