--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <ul class="Main-content">
         <li class="Main-item _1"><a id="Logos" href="logo.html">Logos</a></li>
         <li class="Main-item _2"><a id="Illustrations" href="illustration.html">Illustrations</a></li>
-        <li class="Main-item _3"><a id="Affiches" href="#">Affiches</a></li>
+        <li class="Main-item _3"><a id="Affiches" href="affiche.html">Affiches</a></li>
       </ul>
     </main>
     <footer class="Footer">
