--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="contact.css">
     <title>Portfolio Florian Labare</title>
   </head>
 
@@ -17,19 +17,19 @@
     </header>
     <nav>
       <ul class="LinkBar">
-        <li class="LinkBar-link"><a id=contact href="contact.html">Contact</a></li>
+        <li class="LinkBar-link"><a id=about href="about.html">About</a></li>
       </ul>
         <hr>
     </nav>
     <main class="Container-main Main">
-      <h1 id="Title">About</h1>
-      <p class="Main-bio">
-        Ayant de l'expérience dans le graphisme,<br>j'ai décider d'étendre mes compétences<br>
-        en alliant mon savoir faire créatif et le<br>métier de Développeur Web.
-      </p>
-      <aside class="Main-aside">
-        <a class="CV" href="asset/cv-florian.jpg" target="_blank"><p>Accès à mon CV</p></a>
-      </aside>
+      <h1 id="Title">Contact</h1>
+      <p class="Main-contact">Tel: 06 22 12 01 89 <br>
+      Mail: florianlabare@gmail.com <br>
+      Twitter : @Florian48753351</p>
+      <ul class="Main-content">
+        <li class="CV"><a id="github" href="https://github.com/Bidis93" target="_blank">Github</a></li>
+        <li class="CV"><a id="linkedin" href="https://www.linkedin.com/in/florian-labare/" target="_blank">Linkedin</a></li>
+      </ul>
     </main>
   </body>
 </html>
