--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav>
       <ul class="LinkBar">
         <li class="LinkBar-link"><a id=about href="about.html">About</a></li>
-        <li class="LinkBar-link"><a id=contact href="#">Contact</a></li>
+        <li class="LinkBar-link"><a id=contact href="contact.html">Contact</a></li>
       </ul>
         <hr>
     </nav>
