--- a/affiche.html
+++ b/affiche.html
@@ -19,7 +19,7 @@
     <nav>
       <ul class="LinkBar">
         <li class="LinkBar-link"><a id=about href="about.html">About</a></li>
-        <li class="LinkBar-link"><a id=contact href="contact.html">Contact</a></li>
+        <li class="LinkBar-link"><a id=contact href="#">Contact</a></li>
       </ul>
         <hr>
     </nav>
@@ -62,10 +62,6 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-      <ul class="LinkBar-down">
-        <li class="LinkBar-link-down"><a id="redirection-illus" href="logo.html">Les logos</a></li>
-        <li class="LinkBar-link-down"><a id="redirection-affiches" href="illustration.html">Les illustrations</a></li>
-      </ul>
     </main>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
